--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -52,7 +52,7 @@
           href: ./samples/pattern-logical-operators.md
         - name: 字段
           href: ./samples/pattern-fields.md
-        - name: 参数
+        - name: parameters
           href: ./samples/pattern-parameters.md
         - name: 效果详细信息
           href: ./samples/pattern-effect-details.md
@@ -167,7 +167,11 @@
           displayName: 'monitor, insights, log analytics, builtin'
           href: ../../azure-monitor/insights/vminsights-enable-policy.md?bc=%2fazure%2fgovernance%2fpolicy%2fbreadcrumb%2ftoc.json&toc=%2fazure%2fgovernance%2fpolicy%2ftoc.json
 - name: 疑难解答
-  href: ./troubleshoot/general.md
+  items:
+    - name: 常见问题
+      href: ./troubleshoot/general.md
+    - name: 已知问题
+      href: 'https://github.com/azure/azure-policy#known-issues'
 - name: 参考
   items:
     - name: Azure CLI
@@ -189,9 +193,9 @@
     - name: 用于 Java 的 Azure SDK
       items:
         - name: 分配
-          href: /java/api/com.microsoft.azure.management.resources.policyassignment?view=azure-java-stable
+          href: /java/api/com.microsoft.azure.management.resources.policyassignment
         - name: 策略定义
-          href: /java/api/com.microsoft.azure.management.resources.PolicyDefinitions?view=azure-java-stable
+          href: /java/api/com.microsoft.azure.management.resources.PolicyDefinitions
     - name: 用于 JavaScript 的 Azure SDK
       items:
         - name: 策略
@@ -234,31 +238,45 @@
           href: /azure/templates/microsoft.authorization/policysetdefinitions
 - name: 资源
   items:
-    - name: 已知问题
-      href: 'https://github.com/azure/azure-policy#known-issues'
     - name: GitHub - Azure Policy 示例
       href: 'https://github.com/Azure/azure-policy'
-    - name: GitHub - 社区策略存储库
-      href: 'https://github.com/Azure/Community-Policy'
-    - name: 有关 Azure Policy 的 Microsoft Q&A
-      href: /answers/topics/azure-policy.html
-    - name: 治理 YouTube 频道
-      href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
-    - name: 来宾配置视频
+    - name: 社区工具
       items:
-        - name: 入门
-          href: 'https://www.youtube.com/watch?v=mjJw9_EIyHo'
-        - name: 了解计划
-          href: 'https://www.youtube.com/watch?v=4JZH3kuG8bI'
-        - name: 分配策略
-          href: 'https://www.youtube.com/watch?v=fbZBaxcjA-Y'
-        - name: 修正任务
-          href: 'https://www.youtube.com/watch?v=URE4DUYMgmg'
-    - name: 视频 - Ignite 2019
-      href: 'https://myignite.techcommunity.microsoft.com/sessions/81584?source=sessions'
+        - name: GitHub - 社区策略存储库
+          href: 'https://github.com/Azure/Community-Policy'
+        - name: 用于 Azure Policy 符合性扫描的 GitHub Action
+          href: 'https://github.com/marketplace/actions/azure-policy-compliance-scan'
+        - name: CCO Azure 治理仪表板
+          href: 'https://github.com/Azure/ccodashboard/blob/master/README.md#cco-azure-governance-dashboard-report-pages'
+        - name: AzAdvertizer
+          href: 'https://www.azadvertizer.net/'
+        - name: Azure 治理可视化工具
+          href: 'https://github.com/julianhayward/azure-mg-sub-governance-reporting'
+    - name: 反馈和支持
+      items:
+        - name: 有关 Azure Policy 的 Microsoft Q&A
+          href: /answers/topics/azure-policy.html
+        - name: Azure 支持工单
+          href: 'https://azure.microsoft.com/support/create-ticket/'
+        - name: UserVoice
+          href: 'https://feedback.azure.com/forums/915958-azure-governance?category_id=345055'
+    - name: 视频
+      items:
+        - name: 治理 YouTube 频道
+          href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
+        - name: 视频 - Ignite 2019
+          href: 'https://myignite.techcommunity.microsoft.com/sessions/81584?source=sessions'
+        - name: 来宾配置视频
+          items:
+            - name: 入门
+              href: 'https://www.youtube.com/watch?v=mjJw9_EIyHo'
+            - name: 了解计划
+              href: 'https://www.youtube.com/watch?v=4JZH3kuG8bI'
+            - name: 分配策略
+              href: 'https://www.youtube.com/watch?v=fbZBaxcjA-Y'
+            - name: 修正任务
+              href: 'https://www.youtube.com/watch?v=URE4DUYMgmg'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: UserVoice
-      href: 'https://feedback.azure.com/forums/915958-azure-governance?category_id=345055'
