--- a/articles/governance/resource-graph/index.yml
+++ b/articles/governance/resource-graph/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/29/2020
-  ms.openlocfilehash: 56944141b70243cda870b5d198be567cfc4ae40c
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  ms.openlocfilehash: 20b7548b4b6924e797593fc753ad44be1d03f37d
+  ms.sourcegitcommit: 8a7b82de18d8cba5c2cec078bc921da783a4710e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86536776"
+  ms.lasthandoff: 08/28/2020
+  ms.locfileid: "89050952"
 landingContent:
 - title: 关于 Azure Resource Graph
   linkLists:
@@ -108,7 +108,7 @@ landingContent:
     - text: Azure SDK for Go
       url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph
     - text: 用于 Java 的 Azure SDK
-      url: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
+      url: /java/api/overview/azure/resourcegraph/management
     - text: 用于 JavaScript 的 Azure SDK
       url: /javascript/api/@azure/arm-resourcegraph
     - text: 用于 Python 的 Azure SDK
