--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -6,9 +6,9 @@
     - name: 什么是 Azure 机器学习？
       displayName: 'AML, services, overview, introduction'
       href: overview-what-is-azure-ml.md
-    - name: Azure 机器学习与工作室（经典）
-      displayName: 'AML, Studio, designer'
-      href: compare-azure-ml-to-studio-classic.md
+    - name: 什么是 Azure 机器学习工作室？
+      displayName: 'AML, studio, designer'
+      href: overview-what-is-machine-learning-studio.md
     - name: 体系结构和术语
       displayName: 'architecture, concepts, definitions, glossary'
       href: concept-azure-machine-learning-architecture.md
