--- a/articles/active-directory/conditional-access/TOC.yml
+++ b/articles/active-directory/conditional-access/TOC.yml
@@ -33,8 +33,6 @@
           href: concept-conditional-access-grant.md
         - name: 会话
           href: concept-conditional-access-session.md
-    - name: 见解和报告
-      href: howto-conditional-access-insights-reporting.md
     - name: “仅报表”模式
       href: concept-conditional-access-report-only.md
     - name: 服务依赖项
@@ -52,7 +50,7 @@
   items:
     - name: 计划条件访问部署
       href: plan-conditional-access.md
-    - name: 最佳实践
+    - name: 最佳做法
       href: best-practices.md
     - name: 常用条件访问策略
       items:
@@ -78,6 +76,8 @@
           href: howto-conditional-access-policy-block-access.md
     - name: 阻止传统身份验证
       href: block-legacy-authentication.md
+    - name: 配置仅限报表模式
+      href: howto-conditional-access-insights-reporting.md
     - name: 需要已批准的客户端应用
       href: app-based-conditional-access.md
     - name: 需要应用保护策略
@@ -88,13 +88,9 @@
       href: untrusted-networks.md
     - name: 需要使用条款
       href: terms-of-use.md
-    - name: 配置“仅报表”模式
-      href: howto-conditional-access-report-only.md
     - name: 登录频率和浏览器持久性控制
       href: howto-conditional-access-session-lifetime.md
-    - name: 迁移经典策略
-      href: policy-migration-mfa.md
-    - name: 疑难解答
+    - name: 故障排除
       items:
         - name: 排查登录问题
           href: troubleshoot-conditional-access.md
@@ -102,6 +98,8 @@
           href: troubleshoot-conditional-access-what-if.md
         - name: 常见问题解答
           href: faqs.md
+    - name: 迁移经典策略
+      href: policy-migration-mfa.md
 - name: 参考
   items:
     - name: Beta 版本图形 API
